sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: value j
    j=i
    ^AlgInsertionSort:9: error: not found: value j
    while(j>0 && getValeur(j-1)>v){
          ^AlgInsertionSort:9: error: not found: value j
    while(j>0 && getValeur(j-1)>v){
                           ^AlgInsertionSort:10: error: not found: value j
      if(getValeur(j-1)>v){
                   ^AlgInsertionSort:11: error: not found: value j
        copie(j-1,j)
              ^AlgInsertionSort:11: error: not found: value j
        copie(j-1,j)
                  ^AlgInsertionSort:12: error: not found: value j
        compte = j-1
                 ^